--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@primo-app/ui": "^1.0.1",
+    "marked": "^1.2.0",
     "svelte": "^3.25.1"
   },
   "devDependencies": {},
