--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@primo-app/ui": "^1.0.1",
     "marked": "^1.2.0",
-    "svelte": "^3.25.1"
+    "svelte": "^3.25.1",
+    "turndown": "^6.0.0"
   },
   "devDependencies": {},
   "scripts": {
